force-app/main/default/objects/tdc_tsw__Message__c/tdc_tsw__Message__c.object-meta.xml
<CustomObject>
    <label>SMS History</label>
    <nameField>
        <label>SMS Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>