force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Campaign__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>