force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Channel__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Channel__c</fullName>
    <description>This field has value for the type of message that is sent/received on the SMS History record. For example, the Incoming/Outgoing is SMS, MMS or Whatsapp type</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>