force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>tdc_tsw__ChatTranscript__c</referenceTo>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>