force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Drip_Execution__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Drip_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drip Execution</label>
    <referenceTo>tdc_tsw__Drip_Execution__c</referenceTo>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>