force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__OTP__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__OTP__c</fullName>
    <label>OTP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>