force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Reply_Time_in_Mins__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Reply_Time_in_Mins__c</fullName>
    <description>Reply time IN MINUTES from Incoming create time - Outgoing Create time. For reporting. By Rinnie</description>
    <formula>( ROUND((TIMEVALUE(CreatedDate) - TIMEVALUE(tdc_tsw__Message__r.CreatedDate))/60000,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time difference IN MINUTES between Incoming and Outgoing SMS</inlineHelpText>
    <label>Reply Time (in Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>