force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Scheduled_SMS__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Scheduled_SMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled SMS</label>
    <referenceTo>tdc_tsw__Scheduled_Sms__c</referenceTo>
    <relationshipName>SMS_History</relationshipName>
    <type>Lookup</type>
</CustomField>