force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Transaction_Id__c</fullName>
    <description>Unique Id for a transaction.</description>
    <inlineHelpText>Id for single flow of a transaction.</inlineHelpText>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>