force-app/main/default/objects/tdc_tsw__Message__c/fields/tdc_tsw__WA_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__WA_Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is used to synchronize messages for the Chrome extension.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id from WhatsApp chrome extension</inlineHelpText>
    <label>WA Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>